--- a/FootballMVC/appsettings.json
+++ b/FootballMVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Project": {
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=footballdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
