Збереження гравців в базу даних

--- a/FootballMVC/appsettings.json
+++ b/FootballMVC/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "Project": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Newfootballdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=FootballDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
